Compilador/test v3.1/y.output
Nonterminals useless in grammar

   lista_expresiones


Terminals unused in grammar

   COMENTARIOS
   COMENTARIOS_ANIDADOS


Rules useless in grammar

  121 lista_expresiones: lista_expresiones COMA expresion_numerica
  122                  | expresion_numerica


Gramática

    0 $accept: start_programa $end

    1 start_programa: programa

    2 programa: bloque_declaracion bloque_programa

    3 bloque_declaracion: VAR lista_definiciones ENDVAR

    4 lista_definiciones: lista_definiciones definicion
    5                   | definicion

    6 definicion: CORCHETE_ABIERTO lista_tipo_dato CORCHETE_CERRADO DOS_PUNTOS CORCHETE_ABIERTO lista_ids CORCHETE_CERRADO

    7 lista_tipo_dato: lista_tipo_dato COMA tipo_dato
    8                | tipo_dato

    9 tipo_dato: TIPO_ENTERO
   10          | TIPO_REAL
   11          | TIPO_CADENA

   12 lista_ids: lista_ids COMA ID
   13          | ID

   14 bloque_programa: bloque_programa sentencia
   15                | sentencia

   16 sentencia: asignacion
   17          | bloque_condicional
   18          | asignacion_multiple
   19          | bloque_iteracion
   20          | entrada_datos
   21          | salida_datos

   22 entrada_datos: READ ID

   23 salida_datos: PRINT CADENA
   24             | PRINT ID

   25 $@1: /* vacío */

   26 bloque_iteracion: REPEAT $@1 bloque_programa UNTIL condicion

   27 $@2: /* vacío */

   28 asignacion: ID $@2 OPERADOR_ASIGNACION expresion PUNTO_Y_COMA

   29 $@3: /* vacío */

   30 $@4: /* vacío */

   31 asignacion: ID $@3 OPERADOR_ASIG_STRING $@4 CADENA PUNTO_Y_COMA

   32 expresion: expresion OPERACION_SUMA termino
   33          | expresion OPERACION_RESTA termino
   34          | termino

   35 termino: termino OPERACION_MULTIPLICACION factor
   36        | termino OPERACION_DIVISION factor
   37        | factor

   38 factor: ID
   39       | ENTERO
   40       | REAL
   41       | PARENTESIS_ABIERTO expresion PARENTESIS_CERRADO
   42       | filtro

   43 bloque_condicional: bloque_if

   44 $@5: /* vacío */

   45 bloque_if: OPERADOR_IF PARENTESIS_ABIERTO comparacion $@5 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF

   46 $@6: /* vacío */

   47 $@7: /* vacío */

   48 bloque_if: OPERADOR_IF PARENTESIS_ABIERTO comparacion $@6 OPERADOR_AND comparacion $@7 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF

   49 $@8: /* vacío */

   50 $@9: /* vacío */

   51 $@10: /* vacío */

   52 bloque_if: OPERADOR_IF PARENTESIS_ABIERTO comparacion $@8 OPERADOR_OR comparacion $@9 PARENTESIS_CERRADO $@10 bloque_programa OPERADOR_ENDIF

   53 $@11: /* vacío */

   54 $@12: /* vacío */

   55 bloque_if: OPERADOR_IF OPERADOR_IF PARENTESIS_ABIERTO comparacion $@11 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@12 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF

   56 $@13: /* vacío */

   57 $@14: /* vacío */

   58 $@15: /* vacío */

   59 bloque_if: OPERADOR_IF OPERADOR_IF PARENTESIS_ABIERTO comparacion $@13 OPERADOR_AND comparacion $@14 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@15 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF

   60 $@16: /* vacío */

   61 $@17: /* vacío */

   62 $@18: /* vacío */

   63 $@19: /* vacío */

   64 bloque_if: OPERADOR_IF OPERADOR_IF PARENTESIS_ABIERTO comparacion $@16 OPERADOR_OR comparacion $@17 PARENTESIS_CERRADO $@18 OPERADOR_THEN bloque_programa $@19 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF

   65 condicion: PARENTESIS_ABIERTO comparacion PARENTESIS_CERRADO

   66 $@20: /* vacío */

   67 $@21: /* vacío */

   68 condicion: PARENTESIS_ABIERTO comparacion $@20 OPERADOR_AND comparacion $@21 PARENTESIS_CERRADO

   69 $@22: /* vacío */

   70 $@23: /* vacío */

   71 condicion: PARENTESIS_ABIERTO comparacion $@22 OPERADOR_OR comparacion $@23 PARENTESIS_CERRADO
   72          | PARENTESIS_ABIERTO OPERADOR_NOT PARENTESIS_ABIERTO comparacion PARENTESIS_CERRADO PARENTESIS_CERRADO

   73 comparacion: expresion OPERADOR_MAYOR_A expresion
   74            | expresion OPERADOR_MENOR_A expresion
   75            | expresion OPERADOR_MAYOR_O_IGUAL_A expresion
   76            | expresion OPERADOR_MENOR_O_IGUAL_A expresion
   77            | expresion OPERADOR_IGUAL_A expresion
   78            | expresion OPERADOR_DISTINTO_A expresion

   79 $@24: /* vacío */

   80 $@25: /* vacío */

   81 filtro: FILTER $@24 PARENTESIS_ABIERTO condicion_filter COMA CORCHETE_ABIERTO $@25 lista_ids_filter CORCHETE_CERRADO PARENTESIS_CERRADO

   82 $@26: /* vacío */

   83 condicion_filter: comparacion_filter $@26 OPERADOR_AND comparacion_filter

   84 $@27: /* vacío */

   85 condicion_filter: comparacion_filter $@27 OPERADOR_OR comparacion_filter
   86                 | OPERADOR_NOT PARENTESIS_ABIERTO comparacion_filter PARENTESIS_CERRADO
   87                 | comparacion_filter

   88 comparacion_filter: GUION_BAJO OPERADOR_MAYOR_A expresion_numerica
   89                   | GUION_BAJO OPERADOR_MENOR_A expresion_numerica
   90                   | GUION_BAJO OPERADOR_MAYOR_O_IGUAL_A expresion_numerica
   91                   | GUION_BAJO OPERADOR_MENOR_O_IGUAL_A expresion_numerica
   92                   | GUION_BAJO OPERADOR_IGUAL_A expresion_numerica
   93                   | GUION_BAJO OPERADOR_DISTINTO_A expresion_numerica

   94 asignacion_multiple: CORCHETE_ABIERTO lista_ids_asignMultiple CORCHETE_CERRADO OPERADOR_ASIGNACION CORCHETE_ABIERTO lista_expresiones_asignMultiple CORCHETE_CERRADO

   95 expresion_numerica: expresion_numerica OPERACION_SUMA termino_numerico
   96                   | expresion_numerica OPERACION_RESTA termino_numerico
   97                   | termino_numerico

   98 termino_numerico: termino_numerico OPERACION_MULTIPLICACION factor_numerico
   99                 | termino_numerico OPERACION_DIVISION factor_numerico
  100                 | factor_numerico

  101 factor_numerico: ID
  102                | ENTERO
  103                | REAL
  104                | PARENTESIS_ABIERTO expresion_numerica PARENTESIS_CERRADO

  105 lista_ids_filter: lista_ids_filter COMA ID
  106                 | ID

  107 lista_ids_asignMultiple: lista_ids_asignMultiple COMA ID
  108                        | ID

  109 lista_expresiones_asignMultiple: lista_expresiones_asignMultiple COMA expresion_asignMultiple
  110                                | expresion_asignMultiple

  111 expresion_asignMultiple: expresion_asignMultiple OPERACION_SUMA termino_asignMultiple
  112                        | expresion_asignMultiple OPERACION_RESTA termino_asignMultiple
  113                        | termino_asignMultiple

  114 termino_asignMultiple: termino_asignMultiple OPERACION_MULTIPLICACION factor_asignMultiple
  115                      | termino_asignMultiple OPERACION_DIVISION factor_asignMultiple
  116                      | factor_asignMultiple

  117 factor_asignMultiple: ID
  118                     | ENTERO
  119                     | REAL
  120                     | PARENTESIS_ABIERTO expresion_asignMultiple PARENTESIS_CERRADO


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
COMENTARIOS (258)
COMENTARIOS_ANIDADOS (259)
REPEAT (260) 26
UNTIL (261) 26
OPERACION_SUMA (262) 32 95 111
OPERACION_RESTA (263) 33 96 112
OPERACION_MULTIPLICACION (264) 35 98 114
OPERACION_DIVISION (265) 36 99 115
ID (266) 12 13 22 24 28 31 38 101 105 106 107 108 117
ENTERO (267) 39 102 118
REAL (268) 40 103 119
PARENTESIS_ABIERTO (269) 41 45 48 52 55 59 64 65 68 71 72 81 86 104
    120
PARENTESIS_CERRADO (270) 41 45 48 52 55 59 64 65 68 71 72 81 86 104
    120
COMA (271) 7 12 81 105 107 109
OPERADOR_ASIGNACION (272) 28 94
CADENA (273) 23 31
READ (274) 22
PRINT (275) 23 24
OPERADOR_IF (276) 45 48 52 55 59 64
OPERADOR_THEN (277) 55 59 64
OPERADOR_ELSE (278) 55 59 64
OPERADOR_ENDIF (279) 45 48 52 55 59 64
OPERADOR_AND (280) 48 59 68 83
OPERADOR_OR (281) 52 64 71 85
OPERADOR_NOT (282) 72 86
OPERADOR_MAYOR_A (283) 73 88
OPERADOR_MENOR_A (284) 74 89
OPERADOR_MAYOR_O_IGUAL_A (285) 75 90
OPERADOR_MENOR_O_IGUAL_A (286) 76 91
OPERADOR_IGUAL_A (287) 77 92
OPERADOR_DISTINTO_A (288) 78 93
VAR (289) 3
ENDVAR (290) 3
DOS_PUNTOS (291) 6
PUNTO_Y_COMA (292) 28 31
TIPO_ENTERO (293) 9
TIPO_REAL (294) 10
TIPO_CADENA (295) 11
CORCHETE_ABIERTO (296) 6 81 94
CORCHETE_CERRADO (297) 6 81 94
FILTER (298) 81
GUION_BAJO (299) 88 89 90 91 92 93
OPERADOR_ASIG_STRING (300) 31


No terminales con las reglas donde aparecen

$accept (46)
    en la izquierda: 0
start_programa (47)
    en la izquierda: 1, en la derecha: 0
programa (48)
    en la izquierda: 2, en la derecha: 1
bloque_declaracion (49)
    en la izquierda: 3, en la derecha: 2
lista_definiciones (50)
    en la izquierda: 4 5, en la derecha: 3 4
definicion (51)
    en la izquierda: 6, en la derecha: 4 5
lista_tipo_dato (52)
    en la izquierda: 7 8, en la derecha: 6 7
tipo_dato (53)
    en la izquierda: 9 10 11, en la derecha: 7 8
lista_ids (54)
    en la izquierda: 12 13, en la derecha: 6 12
bloque_programa (55)
    en la izquierda: 14 15, en la derecha: 2 14 26 45 48 52 55 59 64
sentencia (56)
    en la izquierda: 16 17 18 19 20 21, en la derecha: 14 15
entrada_datos (57)
    en la izquierda: 22, en la derecha: 20
salida_datos (58)
    en la izquierda: 23 24, en la derecha: 21
bloque_iteracion (59)
    en la izquierda: 26, en la derecha: 19
$@1 (60)
    en la izquierda: 25, en la derecha: 26
asignacion (61)
    en la izquierda: 28 31, en la derecha: 16
$@2 (62)
    en la izquierda: 27, en la derecha: 28
$@3 (63)
    en la izquierda: 29, en la derecha: 31
$@4 (64)
    en la izquierda: 30, en la derecha: 31
expresion (65)
    en la izquierda: 32 33 34, en la derecha: 28 32 33 41 73 74 75
    76 77 78
termino (66)
    en la izquierda: 35 36 37, en la derecha: 32 33 34 35 36
factor (67)
    en la izquierda: 38 39 40 41 42, en la derecha: 35 36 37
bloque_condicional (68)
    en la izquierda: 43, en la derecha: 17
bloque_if (69)
    en la izquierda: 45 48 52 55 59 64, en la derecha: 43
$@5 (70)
    en la izquierda: 44, en la derecha: 45
$@6 (71)
    en la izquierda: 46, en la derecha: 48
$@7 (72)
    en la izquierda: 47, en la derecha: 48
$@8 (73)
    en la izquierda: 49, en la derecha: 52
$@9 (74)
    en la izquierda: 50, en la derecha: 52
$@10 (75)
    en la izquierda: 51, en la derecha: 52
$@11 (76)
    en la izquierda: 53, en la derecha: 55
$@12 (77)
    en la izquierda: 54, en la derecha: 55
$@13 (78)
    en la izquierda: 56, en la derecha: 59
$@14 (79)
    en la izquierda: 57, en la derecha: 59
$@15 (80)
    en la izquierda: 58, en la derecha: 59
$@16 (81)
    en la izquierda: 60, en la derecha: 64
$@17 (82)
    en la izquierda: 61, en la derecha: 64
$@18 (83)
    en la izquierda: 62, en la derecha: 64
$@19 (84)
    en la izquierda: 63, en la derecha: 64
condicion (85)
    en la izquierda: 65 68 71 72, en la derecha: 26
$@20 (86)
    en la izquierda: 66, en la derecha: 68
$@21 (87)
    en la izquierda: 67, en la derecha: 68
$@22 (88)
    en la izquierda: 69, en la derecha: 71
$@23 (89)
    en la izquierda: 70, en la derecha: 71
comparacion (90)
    en la izquierda: 73 74 75 76 77 78, en la derecha: 45 48 52 55
    59 64 65 68 71 72
filtro (91)
    en la izquierda: 81, en la derecha: 42
$@24 (92)
    en la izquierda: 79, en la derecha: 81
$@25 (93)
    en la izquierda: 80, en la derecha: 81
condicion_filter (94)
    en la izquierda: 83 85 86 87, en la derecha: 81
$@26 (95)
    en la izquierda: 82, en la derecha: 83
$@27 (96)
    en la izquierda: 84, en la derecha: 85
comparacion_filter (97)
    en la izquierda: 88 89 90 91 92 93, en la derecha: 83 85 86 87
asignacion_multiple (98)
    en la izquierda: 94, en la derecha: 18
expresion_numerica (99)
    en la izquierda: 95 96 97, en la derecha: 88 89 90 91 92 93 95
    96 104
termino_numerico (100)
    en la izquierda: 98 99 100, en la derecha: 95 96 97 98 99
factor_numerico (101)
    en la izquierda: 101 102 103 104, en la derecha: 98 99 100
lista_ids_filter (102)
    en la izquierda: 105 106, en la derecha: 81 105
lista_ids_asignMultiple (103)
    en la izquierda: 107 108, en la derecha: 94 107
lista_expresiones_asignMultiple (104)
    en la izquierda: 109 110, en la derecha: 94 109
expresion_asignMultiple (105)
    en la izquierda: 111 112 113, en la derecha: 109 110 111 112 120
termino_asignMultiple (106)
    en la izquierda: 114 115 116, en la derecha: 111 112 113 114 115
factor_asignMultiple (107)
    en la izquierda: 117 118 119 120, en la derecha: 114 115 116


estado 0

    0 $accept: . start_programa $end

    VAR  desplazar e ir al estado 1

    start_programa      ir al estado 2
    programa            ir al estado 3
    bloque_declaracion  ir al estado 4


estado 1

    3 bloque_declaracion: VAR . lista_definiciones ENDVAR

    CORCHETE_ABIERTO  desplazar e ir al estado 5

    lista_definiciones  ir al estado 6
    definicion          ir al estado 7


estado 2

    0 $accept: start_programa . $end

    $end  desplazar e ir al estado 8


estado 3

    1 start_programa: programa .

    $default  reduce usando la regla 1 (start_programa)


estado 4

    2 programa: bloque_declaracion . bloque_programa

    REPEAT            desplazar e ir al estado 9
    ID                desplazar e ir al estado 10
    READ              desplazar e ir al estado 11
    PRINT             desplazar e ir al estado 12
    OPERADOR_IF       desplazar e ir al estado 13
    CORCHETE_ABIERTO  desplazar e ir al estado 14

    bloque_programa      ir al estado 15
    sentencia            ir al estado 16
    entrada_datos        ir al estado 17
    salida_datos         ir al estado 18
    bloque_iteracion     ir al estado 19
    asignacion           ir al estado 20
    bloque_condicional   ir al estado 21
    bloque_if            ir al estado 22
    asignacion_multiple  ir al estado 23


estado 5

    6 definicion: CORCHETE_ABIERTO . lista_tipo_dato CORCHETE_CERRADO DOS_PUNTOS CORCHETE_ABIERTO lista_ids CORCHETE_CERRADO

    TIPO_ENTERO  desplazar e ir al estado 24
    TIPO_REAL    desplazar e ir al estado 25
    TIPO_CADENA  desplazar e ir al estado 26

    lista_tipo_dato  ir al estado 27
    tipo_dato        ir al estado 28


estado 6

    3 bloque_declaracion: VAR lista_definiciones . ENDVAR
    4 lista_definiciones: lista_definiciones . definicion

    ENDVAR            desplazar e ir al estado 29
    CORCHETE_ABIERTO  desplazar e ir al estado 5

    definicion  ir al estado 30


estado 7

    5 lista_definiciones: definicion .

    $default  reduce usando la regla 5 (lista_definiciones)


estado 8

    0 $accept: start_programa $end .

    $default  aceptar


estado 9

   26 bloque_iteracion: REPEAT . $@1 bloque_programa UNTIL condicion

    $default  reduce usando la regla 25 ($@1)

    $@1  ir al estado 31


estado 10

   28 asignacion: ID . $@2 OPERADOR_ASIGNACION expresion PUNTO_Y_COMA
   31           | ID . $@3 OPERADOR_ASIG_STRING $@4 CADENA PUNTO_Y_COMA

    OPERADOR_ASIG_STRING  reduce usando la regla 29 ($@3)
    $default              reduce usando la regla 27 ($@2)

    $@2  ir al estado 32
    $@3  ir al estado 33


estado 11

   22 entrada_datos: READ . ID

    ID  desplazar e ir al estado 34


estado 12

   23 salida_datos: PRINT . CADENA
   24             | PRINT . ID

    ID      desplazar e ir al estado 35
    CADENA  desplazar e ir al estado 36


estado 13

   45 bloque_if: OPERADOR_IF . PARENTESIS_ABIERTO comparacion $@5 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF
   48          | OPERADOR_IF . PARENTESIS_ABIERTO comparacion $@6 OPERADOR_AND comparacion $@7 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF
   52          | OPERADOR_IF . PARENTESIS_ABIERTO comparacion $@8 OPERADOR_OR comparacion $@9 PARENTESIS_CERRADO $@10 bloque_programa OPERADOR_ENDIF
   55          | OPERADOR_IF . OPERADOR_IF PARENTESIS_ABIERTO comparacion $@11 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@12 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF
   59          | OPERADOR_IF . OPERADOR_IF PARENTESIS_ABIERTO comparacion $@13 OPERADOR_AND comparacion $@14 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@15 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF
   64          | OPERADOR_IF . OPERADOR_IF PARENTESIS_ABIERTO comparacion $@16 OPERADOR_OR comparacion $@17 PARENTESIS_CERRADO $@18 OPERADOR_THEN bloque_programa $@19 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF

    PARENTESIS_ABIERTO  desplazar e ir al estado 37
    OPERADOR_IF         desplazar e ir al estado 38


estado 14

   94 asignacion_multiple: CORCHETE_ABIERTO . lista_ids_asignMultiple CORCHETE_CERRADO OPERADOR_ASIGNACION CORCHETE_ABIERTO lista_expresiones_asignMultiple CORCHETE_CERRADO

    ID  desplazar e ir al estado 39

    lista_ids_asignMultiple  ir al estado 40


estado 15

    2 programa: bloque_declaracion bloque_programa .
   14 bloque_programa: bloque_programa . sentencia

    REPEAT            desplazar e ir al estado 9
    ID                desplazar e ir al estado 10
    READ              desplazar e ir al estado 11
    PRINT             desplazar e ir al estado 12
    OPERADOR_IF       desplazar e ir al estado 13
    CORCHETE_ABIERTO  desplazar e ir al estado 14

    $default  reduce usando la regla 2 (programa)

    sentencia            ir al estado 41
    entrada_datos        ir al estado 17
    salida_datos         ir al estado 18
    bloque_iteracion     ir al estado 19
    asignacion           ir al estado 20
    bloque_condicional   ir al estado 21
    bloque_if            ir al estado 22
    asignacion_multiple  ir al estado 23


estado 16

   15 bloque_programa: sentencia .

    $default  reduce usando la regla 15 (bloque_programa)


estado 17

   20 sentencia: entrada_datos .

    $default  reduce usando la regla 20 (sentencia)


estado 18

   21 sentencia: salida_datos .

    $default  reduce usando la regla 21 (sentencia)


estado 19

   19 sentencia: bloque_iteracion .

    $default  reduce usando la regla 19 (sentencia)


estado 20

   16 sentencia: asignacion .

    $default  reduce usando la regla 16 (sentencia)


estado 21

   17 sentencia: bloque_condicional .

    $default  reduce usando la regla 17 (sentencia)


estado 22

   43 bloque_condicional: bloque_if .

    $default  reduce usando la regla 43 (bloque_condicional)


estado 23

   18 sentencia: asignacion_multiple .

    $default  reduce usando la regla 18 (sentencia)


estado 24

    9 tipo_dato: TIPO_ENTERO .

    $default  reduce usando la regla 9 (tipo_dato)


estado 25

   10 tipo_dato: TIPO_REAL .

    $default  reduce usando la regla 10 (tipo_dato)


estado 26

   11 tipo_dato: TIPO_CADENA .

    $default  reduce usando la regla 11 (tipo_dato)


estado 27

    6 definicion: CORCHETE_ABIERTO lista_tipo_dato . CORCHETE_CERRADO DOS_PUNTOS CORCHETE_ABIERTO lista_ids CORCHETE_CERRADO
    7 lista_tipo_dato: lista_tipo_dato . COMA tipo_dato

    COMA              desplazar e ir al estado 42
    CORCHETE_CERRADO  desplazar e ir al estado 43


estado 28

    8 lista_tipo_dato: tipo_dato .

    $default  reduce usando la regla 8 (lista_tipo_dato)


estado 29

    3 bloque_declaracion: VAR lista_definiciones ENDVAR .

    $default  reduce usando la regla 3 (bloque_declaracion)


estado 30

    4 lista_definiciones: lista_definiciones definicion .

    $default  reduce usando la regla 4 (lista_definiciones)


estado 31

   26 bloque_iteracion: REPEAT $@1 . bloque_programa UNTIL condicion

    REPEAT            desplazar e ir al estado 9
    ID                desplazar e ir al estado 10
    READ              desplazar e ir al estado 11
    PRINT             desplazar e ir al estado 12
    OPERADOR_IF       desplazar e ir al estado 13
    CORCHETE_ABIERTO  desplazar e ir al estado 14

    bloque_programa      ir al estado 44
    sentencia            ir al estado 16
    entrada_datos        ir al estado 17
    salida_datos         ir al estado 18
    bloque_iteracion     ir al estado 19
    asignacion           ir al estado 20
    bloque_condicional   ir al estado 21
    bloque_if            ir al estado 22
    asignacion_multiple  ir al estado 23


estado 32

   28 asignacion: ID $@2 . OPERADOR_ASIGNACION expresion PUNTO_Y_COMA

    OPERADOR_ASIGNACION  desplazar e ir al estado 45


estado 33

   31 asignacion: ID $@3 . OPERADOR_ASIG_STRING $@4 CADENA PUNTO_Y_COMA

    OPERADOR_ASIG_STRING  desplazar e ir al estado 46


estado 34

   22 entrada_datos: READ ID .

    $default  reduce usando la regla 22 (entrada_datos)


estado 35

   24 salida_datos: PRINT ID .

    $default  reduce usando la regla 24 (salida_datos)


estado 36

   23 salida_datos: PRINT CADENA .

    $default  reduce usando la regla 23 (salida_datos)


estado 37

   45 bloque_if: OPERADOR_IF PARENTESIS_ABIERTO . comparacion $@5 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF
   48          | OPERADOR_IF PARENTESIS_ABIERTO . comparacion $@6 OPERADOR_AND comparacion $@7 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF
   52          | OPERADOR_IF PARENTESIS_ABIERTO . comparacion $@8 OPERADOR_OR comparacion $@9 PARENTESIS_CERRADO $@10 bloque_programa OPERADOR_ENDIF

    ID                  desplazar e ir al estado 47
    ENTERO              desplazar e ir al estado 48
    REAL                desplazar e ir al estado 49
    PARENTESIS_ABIERTO  desplazar e ir al estado 50
    FILTER              desplazar e ir al estado 51

    expresion    ir al estado 52
    termino      ir al estado 53
    factor       ir al estado 54
    comparacion  ir al estado 55
    filtro       ir al estado 56


estado 38

   55 bloque_if: OPERADOR_IF OPERADOR_IF . PARENTESIS_ABIERTO comparacion $@11 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@12 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF
   59          | OPERADOR_IF OPERADOR_IF . PARENTESIS_ABIERTO comparacion $@13 OPERADOR_AND comparacion $@14 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@15 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF
   64          | OPERADOR_IF OPERADOR_IF . PARENTESIS_ABIERTO comparacion $@16 OPERADOR_OR comparacion $@17 PARENTESIS_CERRADO $@18 OPERADOR_THEN bloque_programa $@19 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF

    PARENTESIS_ABIERTO  desplazar e ir al estado 57


estado 39

  108 lista_ids_asignMultiple: ID .

    $default  reduce usando la regla 108 (lista_ids_asignMultiple)


estado 40

   94 asignacion_multiple: CORCHETE_ABIERTO lista_ids_asignMultiple . CORCHETE_CERRADO OPERADOR_ASIGNACION CORCHETE_ABIERTO lista_expresiones_asignMultiple CORCHETE_CERRADO
  107 lista_ids_asignMultiple: lista_ids_asignMultiple . COMA ID

    COMA              desplazar e ir al estado 58
    CORCHETE_CERRADO  desplazar e ir al estado 59


estado 41

   14 bloque_programa: bloque_programa sentencia .

    $default  reduce usando la regla 14 (bloque_programa)


estado 42

    7 lista_tipo_dato: lista_tipo_dato COMA . tipo_dato

    TIPO_ENTERO  desplazar e ir al estado 24
    TIPO_REAL    desplazar e ir al estado 25
    TIPO_CADENA  desplazar e ir al estado 26

    tipo_dato  ir al estado 60


estado 43

    6 definicion: CORCHETE_ABIERTO lista_tipo_dato CORCHETE_CERRADO . DOS_PUNTOS CORCHETE_ABIERTO lista_ids CORCHETE_CERRADO

    DOS_PUNTOS  desplazar e ir al estado 61


estado 44

   14 bloque_programa: bloque_programa . sentencia
   26 bloque_iteracion: REPEAT $@1 bloque_programa . UNTIL condicion

    REPEAT            desplazar e ir al estado 9
    UNTIL             desplazar e ir al estado 62
    ID                desplazar e ir al estado 10
    READ              desplazar e ir al estado 11
    PRINT             desplazar e ir al estado 12
    OPERADOR_IF       desplazar e ir al estado 13
    CORCHETE_ABIERTO  desplazar e ir al estado 14

    sentencia            ir al estado 41
    entrada_datos        ir al estado 17
    salida_datos         ir al estado 18
    bloque_iteracion     ir al estado 19
    asignacion           ir al estado 20
    bloque_condicional   ir al estado 21
    bloque_if            ir al estado 22
    asignacion_multiple  ir al estado 23


estado 45

   28 asignacion: ID $@2 OPERADOR_ASIGNACION . expresion PUNTO_Y_COMA

    ID                  desplazar e ir al estado 47
    ENTERO              desplazar e ir al estado 48
    REAL                desplazar e ir al estado 49
    PARENTESIS_ABIERTO  desplazar e ir al estado 50
    FILTER              desplazar e ir al estado 51

    expresion  ir al estado 63
    termino    ir al estado 53
    factor     ir al estado 54
    filtro     ir al estado 56


estado 46

   31 asignacion: ID $@3 OPERADOR_ASIG_STRING . $@4 CADENA PUNTO_Y_COMA

    $default  reduce usando la regla 30 ($@4)

    $@4  ir al estado 64


estado 47

   38 factor: ID .

    $default  reduce usando la regla 38 (factor)


estado 48

   39 factor: ENTERO .

    $default  reduce usando la regla 39 (factor)


estado 49

   40 factor: REAL .

    $default  reduce usando la regla 40 (factor)


estado 50

   41 factor: PARENTESIS_ABIERTO . expresion PARENTESIS_CERRADO

    ID                  desplazar e ir al estado 47
    ENTERO              desplazar e ir al estado 48
    REAL                desplazar e ir al estado 49
    PARENTESIS_ABIERTO  desplazar e ir al estado 50
    FILTER              desplazar e ir al estado 51

    expresion  ir al estado 65
    termino    ir al estado 53
    factor     ir al estado 54
    filtro     ir al estado 56


estado 51

   81 filtro: FILTER . $@24 PARENTESIS_ABIERTO condicion_filter COMA CORCHETE_ABIERTO $@25 lista_ids_filter CORCHETE_CERRADO PARENTESIS_CERRADO

    $default  reduce usando la regla 79 ($@24)

    $@24  ir al estado 66


estado 52

   32 expresion: expresion . OPERACION_SUMA termino
   33          | expresion . OPERACION_RESTA termino
   73 comparacion: expresion . OPERADOR_MAYOR_A expresion
   74            | expresion . OPERADOR_MENOR_A expresion
   75            | expresion . OPERADOR_MAYOR_O_IGUAL_A expresion
   76            | expresion . OPERADOR_MENOR_O_IGUAL_A expresion
   77            | expresion . OPERADOR_IGUAL_A expresion
   78            | expresion . OPERADOR_DISTINTO_A expresion

    OPERACION_SUMA            desplazar e ir al estado 67
    OPERACION_RESTA           desplazar e ir al estado 68
    OPERADOR_MAYOR_A          desplazar e ir al estado 69
    OPERADOR_MENOR_A          desplazar e ir al estado 70
    OPERADOR_MAYOR_O_IGUAL_A  desplazar e ir al estado 71
    OPERADOR_MENOR_O_IGUAL_A  desplazar e ir al estado 72
    OPERADOR_IGUAL_A          desplazar e ir al estado 73
    OPERADOR_DISTINTO_A       desplazar e ir al estado 74


estado 53

   34 expresion: termino .
   35 termino: termino . OPERACION_MULTIPLICACION factor
   36        | termino . OPERACION_DIVISION factor

    OPERACION_MULTIPLICACION  desplazar e ir al estado 75
    OPERACION_DIVISION        desplazar e ir al estado 76

    $default  reduce usando la regla 34 (expresion)


estado 54

   37 termino: factor .

    $default  reduce usando la regla 37 (termino)


estado 55

   45 bloque_if: OPERADOR_IF PARENTESIS_ABIERTO comparacion . $@5 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF
   48          | OPERADOR_IF PARENTESIS_ABIERTO comparacion . $@6 OPERADOR_AND comparacion $@7 PARENTESIS_CERRADO bloque_programa OPERADOR_ENDIF
   52          | OPERADOR_IF PARENTESIS_ABIERTO comparacion . $@8 OPERADOR_OR comparacion $@9 PARENTESIS_CERRADO $@10 bloque_programa OPERADOR_ENDIF

    OPERADOR_AND  reduce usando la regla 46 ($@6)
    OPERADOR_OR   reduce usando la regla 49 ($@8)
    $default      reduce usando la regla 44 ($@5)

    $@5  ir al estado 77
    $@6  ir al estado 78
    $@8  ir al estado 79


estado 56

   42 factor: filtro .

    $default  reduce usando la regla 42 (factor)


estado 57

   55 bloque_if: OPERADOR_IF OPERADOR_IF PARENTESIS_ABIERTO . comparacion $@11 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@12 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF
   59          | OPERADOR_IF OPERADOR_IF PARENTESIS_ABIERTO . comparacion $@13 OPERADOR_AND comparacion $@14 PARENTESIS_CERRADO OPERADOR_THEN bloque_programa $@15 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF
   64          | OPERADOR_IF OPERADOR_IF PARENTESIS_ABIERTO . comparacion $@16 OPERADOR_OR comparacion $@17 PARENTESIS_CERRADO $@18 OPERADOR_THEN bloque_programa $@19 OPERADOR_ELSE bloque_programa OPERADOR_ENDIF

    ID                  desplazar e ir al estado 47
    ENTERO              desplazar e ir al estado 48
    REAL                desplazar e ir al estado 49
    PARENTESIS_ABIERTO  desplazar e ir al estado 50
    FILTER              desplazar e ir al estado 51

    expresion    ir al estado 52
    termino      ir al estado 53
    factor       ir al estado 54
    comparacion  ir al estado 80
    filtro       ir al estado 56


estado 58

  107 lista_ids_asignMultiple: lista_ids_asignMultiple COMA . ID

    ID  desplazar e ir al estado 81


estado 59

   94 asignacion_multiple: CORCHETE_ABIERTO lista_ids_asignMultiple CORCHETE_CERRADO . OPERADOR_ASIGNACION CORCHETE_ABIERTO lista_expresiones_asignMultiple CORCHETE_CERRADO

    OPERADOR_ASIGNACION  desplazar e ir al estado 82


estado 60

    7 lista_tipo_dato: lista_tipo_dato COMA tipo_dato .

    $default  reduce usando la regla 7 (lista_tipo_dato)


estado 61

    6 definicion: CORCHETE_ABIERTO lista_tipo_dato CORCHETE_CERRADO DOS_PUNTOS . CORCHETE_ABIERTO lista_ids CORCHETE_CERRADO

    CORCHETE_ABIERTO  desplazar e ir al estado 83


estado 62

   26 bloque_iteracion: REPEAT $@1 bloque_programa UNTIL . condicion

    PARENTESIS_ABIERTO  desplazar e ir al estado 84

    condicion  ir al estado 85


estado 63

   28 asignacion: ID $@2 OPERADOR_ASIGNACION expresion . PUNTO_Y_COMA
   32 expresion: expresion . OPERACION_SUMA termino
   33          | expresion . OPERACION_RESTA termino
